<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.bryanklumpp</groupId>
  <artifactId>desktop</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Maven_name</name>
  <description>asdfasdfasdf</description>
  	<dependencies>
  		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
<!-- 		<dependency> -->
<!-- 		    <groupId>org.apache.commons</groupId> -->
<!-- 		    <artifactId>commons-collections4</artifactId> -->
<!-- 		    <version>4.4</version> -->
<!-- 		</dependency> -->
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
<!-- 		<dependency> -->
<!-- 		    <groupId>commons-io</groupId> -->
<!-- 		    <artifactId>commons-io</artifactId> -->
<!-- 		    <version>2.9.0</version> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 			<groupId>org.unix4j</groupId> -->
<!-- 			<artifactId>unix4j-command</artifactId> -->
<!-- 			<version>0.6</version> -->
<!-- 		</dependency> -->
		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
		<dependency>
		    <groupId>org.xerial</groupId>
		    <artifactId>sqlite-jdbc</artifactId>
		    <version>3.34.0</version>
		</dependency>
		
  </dependencies>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>8</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>